gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21008.d
version https://git-lfs.github.com/spec/v1
oid sha256:d283e465e431ac1c7adba5c48cbe99165c51a662bd82c735ef6f1c967f7ce48b
size 1667
